docs/organizando apresentaçao

--- a/docs/Base/1.1.6.Questionario.md
+++ b/docs/Base/1.1.6.Questionario.md
@@ -1,14 +1,19 @@
-# Questionário
+<center>
 
-**Acesso em:** [Questionário de Usabilidade - EuMeAmo](https://forms.gle/d3ZpKmPhnJE1hFfQ6)
+# __Questionário__
 
-## 1. Introdução
+## **Link de acesso:** [ Questionário de Usabilidade - EuMeAmo](https://forms.gle/d3ZpKmPhnJE1hFfQ6)
 
-Neste projeto **“Eu Me Amo”**, será aplicado um **questionário de usabilidade**.
+</center>
+
+
+## __Introdução__
+
+Neste projeto **“Eu Me Amo”**, será aplicado um **questionário de usabilidade** sobre o [Protótipo](1.5.10.Prototipacao.md) feito pelo grupo.
 
 Um **teste de usabilidade** é uma técnica de avaliação de interfaces em que usuários representam seu público‑alvo para interagir com um protótipo ou sistema. O objetivo principal é identificar problemas de navegação, compreensão e satisfação, além de coletar insights para aprimorar a experiência do usuário.
 
-**O questionário é composto por:**
+O questionário é composto por:
 
 - **Afirmações em escala Likert (1–5)**, acompanhadas de imagens do protótipo, para avaliar visualmente aspectos como navegação, consistência visual, clareza de informações e percepção de funcionalidades.  
 - **Perguntas abertas**, ao final, para recolher feedback qualitativo e sugestões de melhoria.
@@ -18,27 +23,25 @@ As afirmações foram planejadas de acordo com categorias de avaliação: **Logi
 
 ---
 
-## 2. Dinâmica do Questionário
+## __Dinâmica do Questionário__
 
-1. **Visualização**  
-   Cada item apresenta uma **imagem** ou **screenshot** do protótipo e uma **afirmação** relacionada.
+1. **Visualização:**  Cada item apresenta uma **imagem** ou **screenshot** do protótipo e uma **afirmação** relacionada.
 
-2. **Avaliação Quantitativa**  
-   Para cada afirmação, o participante seleciona um valor de **1 (Discordo totalmente)** a **5 (Concordo totalmente)**, conforme sua percepção ao visualizar o protótipo. 
+2. **Avaliação Quantitativa:** Para cada afirmação, o participante seleciona um valor de **1 (Discordo totalmente)** a **5 (Concordo totalmente)**, conforme sua percepção ao visualizar o protótipo. 
 
-3. **Perguntas Abertas**  
-   Ao final, há **duas perguntas abertas** (não obrigatórias) para que o participante deixe comentários gerais, o que mais gostou, o que poderia ser melhorado e funcionalidades desejadas.  
+3. **Perguntas Abertas:** Ao final, há **duas perguntas abertas** (não obrigatórias) para que o participante deixe comentários gerais, o que mais gostou, o que poderia ser melhorado e funcionalidades desejadas.  
 
-4. **Tempo de Resposta**  
-   Estima‑se que o preenchimento leve entre **5 e 7 minutos**.  
+4. **Tempo de Resposta:**  Estima‑se que o preenchimento leve entre **5 e 7 minutos**.  
 
-5. **Confidencialidade**  
-   Os dados coletados são anônimos e utilizados apenas para fins acadêmicos na disciplina de Arquitetura e Desenho de Software da UnB.
+5. **Confidencialidade:**  Os dados coletados são anônimos e utilizados apenas para fins acadêmicos na disciplina de Arquitetura e Desenho de Software da UnB.
 
-6. **Termo de Consentimento**
-   Antes de iniciar o questionário, o participante deverá aceitar um **termo de consentimento**. Esse termo explica os objetivos do teste de usabilidade, garantindo que todas as respostas serão utilizadas apenas para fins de melhoria do aplicativo. A participação é totalmente voluntária, e o usuário pode desistir a qualquer momento.
+6. **Termo de Consentimento:** Antes de iniciar o questionário, o participante deverá aceitar um [termo de consentimento](../assets/termo_consentimento.png). Esse termo explica os objetivos do teste de usabilidade, garantindo que todas as respostas serão utilizadas apenas para fins de melhoria do aplicativo. A participação é totalmente voluntária, e o usuário pode desistir a qualquer momento.
 
----
+<center>
+
+![Termo de Consentimento](../assets/termo_consentimento.png)
+
+</center>
 
 > **Observação:**  
 > - Não é necessário executar nenhuma ação no protótipo, apenas **observar as imagens** e **avaliar** as afirmações.  
@@ -46,7 +49,7 @@ As afirmações foram planejadas de acordo com categorias de avaliação: **Logi
 
 ---
 
-## 3. Afirmações do Questionário
+## __Afirmações do Questionário__
 
 As afirmações a seguir fazem parte do questionário de usabilidade do **Eu Me Amo**. Para cada uma delas, o usuário deverá avaliar seu nível de concordância em uma escala de **1 (Discordo totalmente) a 5 (Concordo totalmente)**, com base na observação das imagens do protótipo.  
 
@@ -96,6 +99,11 @@ Essas afirmações foram organizadas em categorias para abranger diferentes aspe
 ### Perguntas abertas
 - O que você mais gostou no Eu Me Amo e o que poderia ser melhorado?
 - Há algo que você sentiu falta ou que gostaria de mudar no design ou na experiência da plataforma?
+
+
+## __Rastreabilidade__
+
+- [Protótipo](1.5.10.Prototipacao.md)
 
 
 ## Histórico de Versão
