--- a/docs/Base/1.2.2.RichPicture.md
+++ b/docs/Base/1.2.2.RichPicture.md
@@ -55,5 +55,5 @@ __Autor(es):__ [Arthur Fonseca](), [Letícia Hladczuk]() e [Gabriel Saraiva]().
 
 | Versão | Data | Descrição | Autor | Revisor
 |:-:|:-:|:-:|:-:|:-:|
-|`1.0`| 07/04/2025 | Criação do Rich Picture | [Arthur Fonseca](https://github.com/arthurfonsecaa), [Letícia Hladczuk](https://github.com/HladczukLe), [Gabriel Saraiva]() | |
+|`1.0`| 07/04/2025 | Criação do Rich Picture | [Arthur Fonseca](https://github.com/arthurfonsecaa), [Letícia Hladczuk](https://github.com/HladczukLe), [Gabriel Saraiva]() | Arthur Fonseca|
 
