--- a/docs/Base/1.2.5.Publico-Alvo.md
+++ b/docs/Base/1.2.5.Publico-Alvo.md
@@ -1,12 +1,14 @@
+<center>
+
 # __Público-alvo do Projeto EuMeAmo__
+
+</center>
 
 ## __Introdução__
 
 O Público-alvo é um grupo específico de passoas que dirigimos nossas estratégia com intuito de entender suas necessidades e desenvolver uma solução que as satisfaçam.
-
 Esse grupo de pessoas possuem características em comum como dados demográficos, interesses em comum, desejos e necessidades.
-
-Nesse sentido, para definir o público alvo de nosso projeto, foi analisado as necessidades que desejamos suprir a partir de nossas funcionalidades.
+Nesse sentido, para definir o público alvo de nosso projeto, foi analisado as necessidades que desejamos suprir a partir de nossas funcionalidades abstraídas e registradas no [Mapa Mental](1.2.1.Mapa-mental.md).
 
 ## __Metodologia Aplicada__
 
@@ -43,32 +45,40 @@ Com o objetivo de definir de forma mais precisa o público-alvo do projeto, foi 
 
 A partir da análise de plataformas concorrentes foi possível estruturar percepções sobre comportamentos, necessidades e preferências de diferentes perfis de usuários.
 
+<center>
+
 | Certezas (C) | Suposições (S) | Dúvidas (D) | 
 | -------------|----------------|-------------|
-| Há um aumento constante na busca por saúde física e mental integrada. | Usuários desejam acessar diferentes dimensões da saúde (mental, física, nutricional) em uma única plataforma. | Qual é o perfil de usuário que mais busca uma solução integrada: jovens, adultos, mulheres, atletas ou pessoas em transição de hábitos? | 
-| As plataformas analisadas utilizam linguagem acessível, acolhedora e visual atrativo.	| O tom empático e visual amigável atrai mais usuários do sexo feminino. |	Como adaptar o estilo da comunicação para alcançar também outros públicos (homens, pessoas mais velhas, não binários)? |
-| A maioria dos usuários utiliza os apps com objetivos pessoais (autocuidado, produtividade, controle). | A personalização da experiência (por metas e perfis) aumenta a retenção do público.	| Quais são os filtros de personalização mais relevantes para o público-alvo: idade, gênero, rotina, objetivos específicos? |
-| Usuários têm preferência por apps fáceis de usar e com jornadas simples. | O público que procura por saúde emocional valoriza mais o acolhimento do que métricas e gráficos. | O público-alvo deseja uma abordagem mais técnica (dados, progresso) ou emocional (acolhimento, apoio, reflexões)? | 
-| A maioria das plataformas é freemium, com boa aceitação desse modelo. | O público-alvo estaria disposto a pagar por um app se ele trouxer praticidade e centralização de funcionalidades. | Qual é o limite de investimento financeiro que o público estaria disposto a fazer em apps de saúde e bem-estar? |
+| Há um aumento constante na busca por saúde <br> física e mental integrada. | Usuários desejam acessar diferentes dimensões da saúde (mental, física, nutricional) em uma única plataforma. | Qual é o perfil de usuário que mais busca uma solução integrada: jovens, adultos, mulheres, atletas ou pessoas em transição de hábitos? | 
+| As plataformas analisadas utilizam linguagem acessível, acolhedora e <br> visual atrativo.	| O tom empático e visual amigável atrai mais usuários do sexo feminino. |	Como adaptar o estilo da comunicação para alcançar também outros públicos (homens, pessoas mais velhas, não binários)? |
+| A maioria dos usuários utiliza os apps com objetivos pessoais <br> (autocuidado, produtividade, controle). | A personalização da experiência (por metas e perfis) <br> aumenta a retenção do público.	| Quais são os filtros de personalização mais relevantes <br> para o público-alvo: idade, gênero, rotina, objetivos específicos? |
+| Usuários têm preferência por apps fáceis de usar e com jornadas simples. | O público que procura por saúde emocional valoriza mais <br> o acolhimento do que métricas e gráficos. | O público-alvo deseja uma abordagem mais técnica (dados, progresso) ou emocional (acolhimento, apoio, reflexões)? | 
+| A maioria das plataformas é freemium, <br> com boa aceitação desse modelo. | O público-alvo estaria disposto a pagar por um <br> app se ele trouxer praticidade e centralização de funcionalidades. | Qual é o limite de investimento financeiro que o público estaria disposto a fazer em apps de saúde e bem-estar? |
 | A presença de comunidades e redes de apoio em apps aumenta o engajamento. | redes de apoio em apps aumenta o engajamento.	A troca de experiências entre usuários pode ajudar a fidelizar o público. | Que tipo de interação em comunidade o público considera mais confortável: fóruns anônimos, grupos abertos, espaços moderados? | 
-| Algumas plataformas como Flor e Querida Ansiedade focam em questões específicas da saúde feminina. | Mulheres entre 18 e 35 anos parecem mais engajadas com apps voltados ao bem-estar integral. | Esse público sente falta de funcionalidades que unam aspectos como saúde mental, ciclo menstrual e alimentação de forma integrada e sensível? | 
-| Aplicativos que acompanham o progresso diário geram maior sensação de conquista nos usuários. | A criação de metas de curto prazo pode ser mais motivadora do que metas de longo prazo. | Qual é a frequência ideal de feedback para manter o usuário engajado (diária, semanal, por conquista)? |
-| Há diversidade de objetivos entre os usuários (perda de peso, qualidade do sono, redução de ansiedade, melhora de postura etc.). | O público-alvo procura uma plataforma que se adapte ao seu objetivo específico, sem parecer genérica demais. | Como garantir que o app se adapte a diferentes perfis sem se tornar complexo demais?|
+| Algumas plataformas como Flor e Querida Ansiedade focam em <br> questões específicas da saúde feminina. | Mulheres entre 18 e 35 anos parecem mais engajadas com apps voltados ao bem-estar integral. | Esse público sente falta de funcionalidades que unam aspectos como saúde mental, ciclo menstrual e alimentação de forma integrada e sensível? | 
+| Aplicativos que acompanham o progresso diário geram maior <br> sensação de conquista nos usuários. | A criação de metas de curto prazo pode ser mais motivadora do que metas de longo prazo. | Qual é a frequência ideal de feedback para manter o usuário engajado (diária, semanal, por conquista)? |
+| Há diversidade de objetivos entre os usuários (perda de peso, <br> qualidade do sono, redução de ansiedade, melhora de postura etc.). | O público-alvo procura uma plataforma que se adapte ao seu objetivo específico, sem parecer genérica demais. | Como garantir que o app se adapte a diferentes perfis sem se tornar complexo demais?|
+
+</center>
 
 ### __Público-alvo__
 
 A seguir, tem-se uma tabela com a síntese de insights extraídos da análise feita sobre possíveis plataformas concorrentes e a Matriz CSD.
 
+<center>
+
 | Certezas e Suposições Relacionadas | Insights Extraídos | Direcionamento para Público-Alvo | 
 |------------------------------------|--------------------|----------------------------------|
-| Usuários buscam saúde integrada (mental, física, nutricional). Preferem apps simples, com linguagem acolhedora e visual atrativo. | Há uma demanda por soluções holísticas, intuitivas e que combinem autocuidado emocional com hábitos saudáveis. | Público que deseja praticidade e equilíbrio no dia a dia. | 
-| Usuários entre 18 e 35 anos estão mais engajados com apps como Querida Ansiedade, Yazio, Flor. Linguagem sensível e visual empático tem boa aceitação. | Jovens adultos têm maior adesão a apps de saúde integrados com foco no bem-estar emocional e visual amigável. | Perfil majoritário: pessoas jovens interessadas em autocuidado. | 
-| Preferência por metas personalizáveis e progresso diário. Comunidades aumentam engajamento. | O público valoriza sentir evolução e ter suporte emocional/social. | Usuárias que gostam de desafios leves, com acompanhamento e rede de apoio.|
-| Aplicativos freemium são bem recebidos. Usuários topam pagar se o valor for percebido. | Há aceitação do modelo gratuito com upgrades pagos, se o app trouxer benefícios claros. | Usuários com interesse em apps acessíveis, com a possibilidade de investir com base no valor percebido. |
-| Dúvidas sobre tom de comunicação para públicos diversos, faixa de idade, tipos de notificação, entre outros. | Há espaço para ampliar o escopo, mas é preciso validar o que funciona com públicos fora do perfil central. | Público-alvo pode ser expandido no futuro, após testes com outras faixas etárias e perfis comportamentais. | 
-| Notificações frequentes podem causar rejeição se forem excessivas ou genéricas. | Comunicação precisa ser personalizada, com tom leve. | Usuários preferem lembretes discretos, mas constantes. | 
-| Há valorização de conteúdos educativos curtos (vídeos, textos breves, dicas visuais). | O público quer aprender de forma prática e visual. | Integração de conhecimento rápido pode aumentar engajamento.| 
-| Interesse crescente por autoconhecimento e conteúdos voltados à saúde mental, como meditações e autoavaliações. | A jornada pessoal é um valor central para o usuário. | Público busca não só saúde física, mas compreensão emocional.|
+| Usuários buscam saúde integrada (mental, física, nutricional). <br> Preferem apps simples, com linguagem acolhedora e visual atrativo. | Há uma demanda por soluções holísticas, intuitivas <br> e que combinem autocuidado emocional com hábitos saudáveis. | Público que deseja praticidade e equilíbrio no dia a dia. | 
+| Usuários entre 18 e 35 anos estão <br> mais engajados com apps como Querida Ansiedade, Yazio, Flor. <br> Linguagem sensível e visual empático tem boa aceitação. | Jovens adultos têm maior adesão a apps de saúde integrados com foco no bem-estar emocional e visual amigável. | Perfil majoritário: pessoas jovens interessadas em autocuidado. | 
+| Preferência por metas personalizáveis e progresso diário. <br> Comunidades aumentam engajamento. | O público valoriza sentir evolução e ter suporte emocional/social. | Usuárias que gostam de desafios leves, com acompanhamento e rede de apoio.|
+| Aplicativos freemium são bem recebidos. <br> Usuários topam pagar se o valor for percebido. | Há aceitação do modelo gratuito com upgrades pagos, se o app trouxer benefícios claros. | Usuários com interesse em apps acessíveis, com a possibilidade de investir com base no valor percebido. |
+| Dúvidas sobre tom de comunicação para públicos <br> diversos, faixa de idade, tipos de notificação, entre outros. | Há espaço para ampliar o escopo, mas é preciso validar o que funciona com públicos fora do perfil central. | Público-alvo pode ser expandido no futuro, após testes com outras faixas etárias e perfis comportamentais. | 
+| Notificações frequentes podem causar <br> rejeição se forem excessivas ou genéricas. | Comunicação precisa ser personalizada, com tom leve. | Usuários preferem lembretes discretos, mas constantes. | 
+| Há valorização de conteúdos educativos curtos <br> (vídeos, textos breves, dicas visuais). | O público quer aprender de forma prática e visual. | Integração de conhecimento rápido pode aumentar engajamento.| 
+| Interesse crescente por autoconhecimento e conteúdos <br> voltados à saúde mental, como meditações e autoavaliações. | A jornada pessoal é um valor central para o usuário. | Público busca não só saúde física, mas compreensão emocional.|
+
+</center>
 
 ### __Conclusão__
 
@@ -79,6 +89,10 @@ São pessoas que geralmente utilizam mais de um app para atender diferentes aspe
 Esse público também demonstra crescente interesse por **autoconhecimento** e por soluções que se encaixem de maneira natural em suas rotinas, sem gerar sobrecarga. Ainda que o foco principal esteja em jovens adultos, há espaço para futura expansão para outros perfis, a partir de validações e testes.
 
 ---
+
+### __Rastreabilidade__
+
+- [Mapa Mental](1.2.1.Mapa-mental.md)
 
 ## __Refências Bibliográficas__
 
