--- a/docs/Base/1.2.ArtefatoGeneralista.md
+++ b/docs/Base/1.2.ArtefatoGeneralista.md
@@ -1,10 +1,80 @@
-# 1.2. Módulo Artefato Generalista
+<center>
 
-Focos_2: Artefato Independente de Metodologia (ou seja, generalista).
+# __Módulo Artefato Generalista__
 
-Entrega Mínima: 1 artefato generalista (ESCOPO: 5W2H; Mapa Mental; Diagrama Causa-Efeito; Rich Picture; Léxico (ou Glossário) ou Planos de Risco, Custo e Tempo).
+</center>
 
-Apresentação (para a professora) explicando o artefato elaborado, com: (i) rastro claro aos membros participantes (MOSTRAR QUADRO DE PARTICIPAÇÕES & COMMITS); (ii) justificativas & senso crítico sobre o trabalho realizado, e (iii) comentários gerais sobre o trabalho em equipe. Tempo da Apresentação: +/- 5min. Recomendação: Apresentar diretamente via Wiki ou GitPages do Projeto. Baixar os conteúdos com antecedência, evitando problemas de internet no momento de exposição nas Dinâmicas de Avaliação.
+No Foco 2, a equipe elaborou
 
-A Wiki ou GitPages do Projeto deve conter um tópico dedicado ao Módulo Artefato Generalista, cm 1 artefato que seja independente de metodologia adotada, histórico de versões, referências, e demais detalhamentos gerados pela equipe nesse escopo.
-Demais orientações disponíveis nas Diretrizes (vide Aprender3).
+
+O presente documento compõe o Módulo Artefato Generalista, proposto no escopo do Focos 2 da disciplina Arquitetura e Desenho de Software.
+
+O objetivo central deste módulo é apresentar um artefato independente da metodologia adotada pela equipe, promovendo uma visão mais ampla, estruturada e crítica
+sobre aspectos relevantes do projeto em desenvolvimento.
+
+
+Nesse sentido, os seguintes artefatos foram produzidos: 
+
+## __[Mapa Mental](1.2.1.Mapa-mental.md)__
+
+O Mapa Mental foi elaborado durante a [Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md), com base em uma dinâmica de brainstorming coletivo, na qual a equipe explorou e organizou ideias relacionadas ao contexto do projeto. Por meio do registro de palavras-chave, conexões e conceitos visuais, o grupo buscou mapear os principais domínios temáticos, como **saúde física**, **bem-estar mental**, **postura**, **nutrição** e **comunidade**. O artefato teve como objetivo ampliar o entendimento sobre o universo do projeto e orientar a definição inicial de funcionalidades e focos de atuação.
+
+<center>
+
+| Integrantes        | Papel                                                                 |
+|--------------------|-----------------------------------------------------------------------|
+| Fillipe Andrade    | Participação na Reunião 2 e colaboração no desenvolvimento do artefato |
+| Luiza Maluf        | Participação na Reunião 2, colaboração no desenvolvimento e responsável pela documentação |
+| Mateus Boquady     | Participação na Reunião 2 e colaboração no desenvolvimento do artefato |
+| Rodrigo Rodrigues  | Participação na Reunião 2 e colaboração no desenvolvimento do artefato |
+| Lucas Bottino      | Revisão do artefato | 
+
+
+</center>
+
+## __[Rich Picture](1.2.2.RichPicture.md#rich-picture)__
+
+O **Rich Picture** é uma técnica visual utilizada para representar de forma intuitiva e não estruturada um sistema complexo, suas interações e os problemas envolvidos. Ele consiste em um desenho que combina elementos como pessoas, processos, objetos e relacionamentos, permitindo uma visão holística da situação. Esse recurso é especialmente útil para facilitar o entendimento comum entre membros da equipe e stakeholders, promovendo o alinhamento de expectativas e a clareza sobre os cenários abordados.
+Frames do Sistema Representado
+
+O Rich Picture foi dividido em cinco frames, cada um ilustrando um aspecto essencial da plataforma. Todos os frames foram desenvolvidos pelos mesmos autores, garantindo coesão visual e semântica entre os sistemas representados.
+
+<center>
+
+| Frame                             | Sistema Representado                    | Autor(es)                                         |
+|-----------------------------------|-----------------------------------------|---------------------------------------------------|
+| Frame 1                           | [Sistema principal ](1.2.2.RichPicture.md#rich-picture)| Arthur Fonseca, Letícia Hladczuk, Gabriel Saraiva |
+| Frame 2                           | [Sistema de Postura/Ergonomia](1.2.2.RichPicture.md#rich-picture)            | Arthur Fonseca, Letícia Hladczuk, Gabriel Saraiva |
+| Frame 3                           | [Sistema de Dicas de Saúde](1.2.2.RichPicture.md#rich-picture)               | Arthur Fonseca, Letícia Hladczuk, Gabriel Saraiva |
+| Frame 4                           | [Sistema de Monitoramento/Lembretes](1.2.2.RichPicture.md#rich-picture)      | Arthur Fonseca, Letícia Hladczuk, Gabriel Saraiva |
+| Frame 5                           | [Sistema de Treinos e Exercícios](1.2.2.RichPicture.md#rich-picture)         | Arthur Fonseca, Letícia Hladczuk, Gabriel Saraiva |
+
+</center>
+
+## __[5W2H](1.2.3.5W2H.md)__
+
+O **5W2H** é um framework utilizado para estruturar planos de ação, incentivando o pensamento **crítico** diante de problemas complexos. Ele divide uma tarefa ou projeto em sete dimensões-chave:
+
+- What (O quê?)
+- Who (Quem?)
+- Where (Onde?)
+- When (Quando?)
+- Why (Por quê?)
+- How (Como?)
+- How Much (Quanto custa?)
+
+Essa estrutura promove um alinhamento claro entre membros da equipe e partes interessadas, além de apoiar o planejamento e a execução estratégica do projeto.
+
+<center>
+
+| Pergunta           | Descrição                                                                                                                                 |
+|--------------------|-------------------------------------------------------------------------------------------------------------------------------------------|
+| What (O quê?)      | Projeto EuMeAmo.                                                                                                                          |
+| Who (Quem?)        | Alunos do grupo EuMeAmo.                                                                                                                  |
+| Where (Onde?)      | Na FCTE ou remotamente.                                                                                                                   |
+| When (Quando?)     | No semestre 2025.1                                                                                                                        |
+| Why (Por quê?)     | Necessidade de promover qualidade de vida e bem-estar, facilitar acesso a conteúdos confiáveis e incentivar rotinas saudáveis.           |
+| How (Como?)        | Uso de metodologias ágeis, ferramentas de levantamento de requisitos, análise de concorrentes e padrões de projeto.                      |
+| How Much (Quanto?) | Custos de desenvolvimento; busca por patrocinadores; uso de plataformas gratuitas como Netlify/Vercel e ferramentas como Figma e Miro.   |
+
+</center>
