--- a/docs/Base/1.5.7.Priorizacao.md
+++ b/docs/Base/1.5.7.Priorizacao.md
@@ -6,11 +6,11 @@
 
 ## __Introdução__
 
-Este documento tem como objetivo apresentar a priorização dos requisitos elicitados. A prirização é uma etapa essencial do processo de Engenharia de Requisitos, pois permite identificar quais funcionalidades são fundamentais para o escopo mínimo do sistema, bem como aquelas que podem ser implementadas em versões futuras, de acordo com os objetivo do projeto e as necessidades dos usuários.
+Este documento tem como objetivo apresentar a priorização dos requisitos elicitados. A prirização é uma etapa essencial do processo de Engenharia de Requisitos, pois permite identificar quais funcionalidades são fundamentais para o escopo mínimo do sistema, bem como aquelas que podem ser implementadas em versões futuras, de acordo com os objetivo do projeto e as necessidades dos [usuários](1.2.5.Publico-Alvo.md#conclusão).
 
 ## __Metodologia__
 
-Para a priorização de requisitos, foi utilizada a técnica **MoSCoW**, que classifica cada item com base em sua importância relativa para os usuários e stakeholders. A sigla MoSCoW representa a seguintes categorias:
+Para a priorização de requisitos, foi utilizada a técnica **MoSCoW**, que classifica cada item com base em sua importância relativa para os usuários e [stakeholders](1.5.9.ListaStakeholders.md). A sigla MoSCoW representa a seguintes categorias:
 
 - **MUST (M) -** Requisitos que **devem ser implementados** no escopo mínimo do sistema. Sem eles, o sistema não atende às suas funções principais.
 - **Should (S) -** Requisitos importantes, mas que **podem ser implementados posteriormente** em comprometer o funcionamento inicial do sistema.
@@ -73,6 +73,8 @@ Cada requisito identificado e documentado na [Tabela de Requisitos](../Base/1.5.
 
 - [Tabela de Requisitos](../Base/1.5.6.Tabela-Requisitos.md#tabela-de-requisitos-do-projeto)
 - [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md)
+- [Lista de stakeholders](1.5.9.ListaStakeholders.md)
+- [Público-alvo](1.2.5.Publico-Alvo.md#conclusão)
 
 ---
 
