docs/artefatos-generalistas

--- a/docs/Base/1.2.ArtefatoGeneralista.md
+++ b/docs/Base/1.2.ArtefatoGeneralista.md
@@ -77,4 +77,40 @@ Essa estrutura promove um alinhamento claro entre membros da equipe e partes int
 | How (Como?)        | Uso de metodologias ágeis, ferramentas de levantamento de requisitos, análise de concorrentes e padrões de projeto.                      |
 | How Much (Quanto?) | Custos de desenvolvimento; busca por patrocinadores; uso de plataformas gratuitas como Netlify/Vercel e ferramentas como Figma e Miro.   |
 
+| Integrante        | Participação                                                    |
+|-------------------|------------------------------------------------------------------|
+| Carlos            | Coautor da versão inicial (v1.0)                                 |
+| Lucas             | Coautor da versão inicial (v1.0)                                 |
+| Pablo             | Coautor da versão inicial (v1.0)                                 |
+| Luiza             | Revisora da versão inicial (v1.0) e da revisão (v1.1)            |
+
 </center>
+
+## __[Léxico](1.2.4.Lexicos.md)__
+
+Este artefato foi desenvolvido para padronizar os termos, expressões e conceitos utilizados ao longo do projeto “Eu Me Amo”. Com base na técnica de **Léxico Ampliado à Linguagem (LAL)**, o objetivo é garantir clareza na comunicação entre os membros da equipe, stakeholders e usuários, além de facilitar a definição dos requisitos do sistema.
+
+A construção do léxico passou pelas seguintes etapas:
+
+- Identificação dos termos, por meio de brainstorms, análise de documentos e estudos sobre o domínio do autocuidado;
+- Descrição da noção, definindo cada termo de forma clara e objetiva;
+- Descrição do impacto, indicando como cada termo se relaciona com o funcionamento da plataforma e afeta a experiência do usuário.
+
+Esse artefato contribui significativamente para o alinhamento conceitual do projeto, permitindo uma melhor compreensão dos fluxos, funcionalidades e interações.
+
+<center>
+
+| Integrante       | Participação                                               |
+|------------------|------------------------------------------------------------|
+| Carlos Henrique  | Criação do documento inicial, revisão das versões subsequentes |
+| Arthur Fonseca   | Inclusão de novos termos na versão 1.1                     |
+| Pablo Serra      | Inclusão de novos termos na versão 1.2                     |
+
+</center>
+
+
+## Histórico de Versão
+
+| Versão | Data | Descrição | Autor | Revisor
+|:-:|:-:|:-:|:-:|:-:|
+|`1.0`| 11/04/2025 | Criação do documento| [Luiza Maluf](https://github.com/LuizaMaluf)| [Lucas Bottino](https://github.com/bottinolucas)  |
