docs/artefatos-generalistas - formataçao e padronização

--- a/docs/Base/1.2.1.Mapa-mental.md
+++ b/docs/Base/1.2.1.Mapa-mental.md
@@ -1,4 +1,8 @@
+<center>
+
 # __Mapa Mental relacionado ao Projeto EuMeAmo__
+
+</center>
 
 ## __Introdução__
 
@@ -8,7 +12,7 @@ Este documento apresenta o Mapa Mental da Plataforma de autocuidado "Eu Me Amo",
 
 O Mapa Mental é uma técnica de organização visual do conhecimento, desenvolvida por Tony Buzan na década de 1970. Ele é baseado na forma como o cérebro processa informações, utilizando palavras-chave, conexões e imagens para facilitar a memorização e o entendimento de conceitos complexos.
 
-O __Mapa Mental 1__ foi elaborado pelo grupo com base nas discurssões realizadas pelos integrantes do grupo,  referênciadas por aplicativos similares, estudos sobre saúde e ergonomia, além de boas práticas de design de experiência do usuário (UX). Ele representa as principais funcionalidades e possibilidades de interação dentro do sistema, ajudando a organizar os requisitos e validar as necessidades dos usuários.
+O __Mapa Mental 1__ foi elaborado pelo grupo com base nas discurssões realizadas pelos integrantes do grupo na [Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md), referênciadas por aplicativos similares, estudos sobre saúde e ergonomia, além de boas práticas de design de experiência do usuário (UX). Ele representa as principais funcionalidades e possibilidades de interação dentro do sistema, ajudando a organizar os requisitos e validar as necessidades dos usuários.
 
 O __Mapa Mental 2__ foi elaborado tendo em vista a visão técnica da plataforma, pensando em aspectos como tipos de usuários, interações, tecnologias a serem utilizadas e etc.
 
@@ -33,6 +37,10 @@ __Autor(es):__ [Fillipe Andrade](), [Luiza Maluf](), [Mateus Boquady]() e [Rodri
 </center>
 
 ---
+
+## __Rastrabilidade__
+
+- [Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md)
 
 ## __Gravação da Produção dos artefatos__
 
