--- a/docs/Base/1.2.2.RichPicture.md
+++ b/docs/Base/1.2.2.RichPicture.md
@@ -1,4 +1,8 @@
+<center>
+
 # __Rich Picture__
+
+</center>
 
 ## __Introdução__
 
@@ -38,6 +42,10 @@ __Autor(es):__ [Arthur Fonseca](), [Letícia Hladczuk]() e [Gabriel Saraiva]().
 
 
 </center>
+
+## __Rastreabilidade__
+
+- [Reunião 4](../Projeto/Iniciativas%20Extras/ata_04.md)
 
 ## __Gravação da criação do Rich Picture__
 
