--- a/docs/Base/1.2.3.5W2H.md
+++ b/docs/Base/1.2.3.5W2H.md
@@ -1,4 +1,8 @@
+<center>
+
 # **5W2H relacionado ao Projeto EuMeAmo**
+
+</center>
 
 ## **Introdução**
 
@@ -8,7 +12,7 @@ Em sua essência, é um checklist que possibilita dividir uma tarefa em partes. 
 
 A origem do 5W2H não é certa, mas a maior probabilidade é que seja um dos vários métodos que nasceram no auge do Sistema Toyota de Produção, no Japão. É conhecido também como uma das bases para a implementação de outras ferramentas e metodologias, como o **lean manufacturing** no chão de fábrica, bem como o **kanban** e **kaizen** para a **gestão de projetos**.
 
-Arquitetura 5W2H do Projeto “EuMeAmo”
+## **Arquitetura 5W2H do Projeto “EuMeAmo”**
 
 A seguir, apresentamos a estrutura 5W2H (What, Why, Where, When, Who, How, How Much) aplicada ao projeto “EuMeAmo”, plataforma de autocuidado focada em bem-estar e qualidade de vida.
 
@@ -32,6 +36,10 @@ O 5W2H oferece uma estrutura simples e eficiente para alinhar as expectativas e 
 | **How** (Como?)              | Utilizando de metologias àgeis , ferramentas de levantamento de requisitos, análise de mercado de softwares similares e utilizando padrões de projeto.                                                           |
 | **How Much** (Quanto custa?) | Custos de desenvolvimento, buscar por patrocinadores e plataforma de hospedagem gratuita como "Netlify ou Vercel", Para Design/UX "Figma ou Miro", Campanhas e parcerias para custear os servidores mensalmente. |
 
+## __Rastreabilidade__
+
+- [Reunião 3](../Projeto/Iniciativas%20Extras/ata_03.md)
+
 ## Referências
 
 - **BUZAN, Tony.** _Use Your Head._ BBC Active, 1974.
@@ -44,7 +52,7 @@ O 5W2H oferece uma estrutura simples e eficiente para alinhar as expectativas e 
 
 ## Histórico de Versão
 
-| **Versão** |   **Data** | **Descrição**                                 | **Autor(es)**           | **Revisor(es)**         | **Detalhes da Revisão** |
-| ---------: | ---------: | --------------------------------------------- | ----------------------- | ----------------------- | ----------------------- |
-|        1.0 | 03/04/2025 | Criação do documento 5W2H e estrutura inicial | [Carlos, Lucas e Pablo] | [Carlos, Lucas e Pablo] |                         |
-|        1.1 | 05/04/2025 | Correção do documento 5W2H                    | [Lucas]                 | [Luiza, Mateus Levy]    |                         |
+| **Versão** |   **Data** | **Descrição**                                 | **Autor(es)**           | **Revisor(es)**         | 
+| ---------: | ---------: | --------------------------------------------- | ----------------------- | ----------------------- | 
+|        '1.0' | 03/04/2025 | Criação do documento 5W2H e estrutura inicial | [Carlos, Lucas e Pablo] | [Luiza]                 | 
+|        '1.1' | 05/04/2025 | Correção do documento 5W2H                    | [Lucas]                 | [Luiza]                   |
