--- a/docs/Base/1.2.4.Lexicos.md
+++ b/docs/Base/1.2.4.Lexicos.md
@@ -1,36 +1,44 @@
-# Introdução
-- Segundo o Oxford Languages, o léxico é o conjunto de vocábulos pertencentes a uma língua, a uma pessoa ou a um ramo do conhecimento. No contexto do projeto “Eu Me Amo”, o léxico funcionará como uma ferramenta de padronização dos termos, conceitos e expressões que serão utilizados para descrever as funcionalidades, fluxos de interação e demais elementos da plataforma de autocuidado. Essa padronização facilita o entendimento entre a equipe, stakeholders e usuários, contribuindo para a clareza na comunicação e na definição dos requisitos do sistema.
+<center>
 
-# Metodologia
+# __Léxico__
 
-- Para a construção do léxico, será utilizada a técnica de Léxico Ampliado à Linguagem (LAL), que é composta pelas seguintes etapas:
+</center>
 
-## a. Identificação dos termos
-- **Objetivo:**  
-  Identificar palavras, expressões e símbolos essenciais para o domínio da plataforma “Eu Me Amo”.
+## __Introdução__
+
+Segundo o Oxford Languages, o léxico é o conjunto de vocábulos pertencentes a uma língua, a uma pessoa ou a um ramo do conhecimento. 
+
+No contexto do projeto “Eu Me Amo”, o léxico funcionará como uma ferramenta de padronização dos termos, conceitos e expressões que serão utilizados para descrever as funcionalidades, fluxos de interação e demais elementos da plataforma de autocuidado. 
+
+Essa padronização facilita o entendimento entre a equipe, stakeholders e usuários, contribuindo para a clareza na comunicação e na definição dos requisitos do sistema.
+
+## __Metodologia__
+
+Para a construção do léxico, será utilizada a técnica de Léxico Ampliado à Linguagem (LAL), que é composta pelas seguintes etapas:
+
+### __a. Identificação dos termos__
+- **Objetivo:** Identificar palavras, expressões e símbolos essenciais para o domínio da plataforma “Eu Me Amo”.
 
 - **Processo:**  
   - Conduzir entrevistas e sessões de brainstorming com os integrantes do projeto para captar insights diversos.  
   - Analisar documentos, pesquisas de mercado e estudos focados em autocuidado e bem-estar para fundamentar a escolha dos termos.  
   - Levantar e categorizar termos que se enquadrem como verbos, objetos ou estados, considerando também possíveis sinônimos.
 
-### b. Descrição da Noção
-- **Objetivo:**  
-  Registrar uma definição clara e objetiva (literal ou denotativa) para cada símbolo identificado, garantindo sua compreensão dentro do contexto do projeto.
+### __b. Descrição da Noção__
+- **Objetivo:**  Registrar uma definição clara e objetiva (literal ou denotativa) para cada símbolo identificado, garantindo sua compreensão dentro do contexto do projeto.
 
 - **Processo:**  
   - Desenvolver descrições precisas e diretas para cada termo, facilitando a comunicação e o entendimento entre a equipe e os stakeholders.
 
-### c. Descrição do Impacto
-- **Objetivo:**  
-  Detalhar como cada símbolo influencia – ou é influenciado – pelo funcionamento da plataforma “Eu Me Amo”, e os efeitos que gera no contexto de autocuidado e bem-estar dos usuários.
+### __c. Descrição do Impacto__
+- **Objetivo:** Detalhar como cada símbolo influencia – ou é influenciado – pelo funcionamento da plataforma “Eu Me Amo”, e os efeitos que gera no contexto de autocuidado e bem-estar dos usuários.
 
 - **Processo:**  
   - Especificar as funções e tarefas associadas a cada termo.  
   - Mapear a inter-relação entre os símbolos, evidenciando o papel de cada um na operação e na evolução do sistema.
 
 
-## d. Tabela de exemplo
+### __d. Tabela de exemplo__
 
 | Termo | Descrição |
 | --- | --- |
@@ -39,9 +47,10 @@
 | Noção | Definição literal ou denotativa do símbolo |
 | Impacto | Como o símbolo influencia ou é influenciado pelo funcionamento do sistema e quais efeitos ele provoca no contexto específico da aplicação |
 
-# Léxicos
-
 ---
+
+## __Léxicos__
+
 
 ### Administrador  
 <a id="administrador"></a>
